name: test
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: leejw51@gmail.com
category: Codec
author: lee jongwhan
extra-source-files:
    ChangeLog.md

executable test
    main-is: Main.hs
    build-depends:
        base >=4.9 && <4.10
    default-language: Haskell2010
    hs-source-dirs: src

